Bug-fix. Correct z-index for richeditor`s full-screen mode.

--- a/modules/backend/formwidgets/richeditor/assets/less/richeditor.less
+++ b/modules/backend/formwidgets/richeditor/assets/less/richeditor.less
@@ -47,7 +47,7 @@
 }
 
 .redactor-box-fullscreen {
-    z-index: @richeditor-zindex + 99 !important;
+    z-index: @richeditor-zindex + 115 !important;
 }
 .redactor-toolbar,
 .redactor-dropdown {
